--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,10 @@
     "test/**/__snapshots__": true,
     "yarn.lock": true,
     "*.{css,sass,scss}.d.ts": true
+  },
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#2C3012",
+    "titleBar.activeBackground": "#3E431A",
+    "titleBar.activeForeground": "#F9FAF2"
   }
 }
