--- a/package.json
+++ b/package.json
@@ -183,8 +183,8 @@
     "css-loader": "^6.3.0",
     "css-minimizer-webpack-plugin": "^3.1.0",
     "detect-port": "^1.3.0",
-    "electron": "^15.1.0",
-    "electron-builder": "^22.11.7",
+    "electron": "^15.3.0",
+    "electron-builder": "^22.13.1",
     "electron-devtools-installer": "^3.2.0",
     "electron-notarize": "^1.1.1",
     "electron-rebuild": "^3.2.3",
@@ -222,14 +222,18 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "ansi-regex": "^6.0.1",
     "electron-debug": "^3.2.0",
+    "electron-is-dev": "^2.0.0",
     "electron-log": "^4.4.1",
     "electron-updater": "^4.3.9",
     "history": "4.x.x",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "regenerator-runtime": "^0.13.9"
+    "regenerator-runtime": "^0.13.9",
+    "wait-on": "^6.0.0"
   },
   "devEngines": {
     "node": ">=14.x",
