Added Rows and Columns Added a left secured Nav bar with starter icons

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -24,7 +24,8 @@
 		{
 			"type": "shell",
 			"label": "yarn tauri dev",
-			"command": "yarn tauri dev",
+			"command": "yarn",
+			"args": ["tauri", "dev"],
 			"problemMatcher": []
 		}
 	]
