Update to tasks and Readme

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,9 +23,16 @@
 		},
 		{
 			"type": "shell",
-			"label": "yarn tauri dev",
+			"label": "Development",
 			"command": "yarn",
 			"args": ["tauri", "dev"],
+			"problemMatcher": []
+		},
+		{
+			"type": "shell",
+			"label": "Production",
+			"command": "yarn",
+			"args": ["tauri", "build"],
 			"problemMatcher": []
 		}
 	]
