--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "app"
 version = "0.1.0"
-description = "A Tauri App"
+description = "A Task and organisation app, written in JavaScript and Rust, using Tauri and React"
 authors = ["you"]
 license = ""
-repository = ""
+repository = "/EngineeringDeveloper/Queue"
 default-run = "app"
 edition = "2018"
 build = "src/build.rs"
@@ -18,6 +18,7 @@ tauri-build = { version = "1.0.0-beta.4" }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
+todo-txt = {version = "2.0", features = ["serde-support"]}
 
 [features]
 default = [ "custom-protocol" ]
