added default working directory

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,7 +8,9 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: ./src-tauri
     steps:
     - uses: actions/checkout@v2
     - name: Run Tests 
@@ -17,12 +19,14 @@ jobs:
       
   clippy_check:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./src-tauri
     steps:
     - uses: actions/checkout@v2
     - run: rustup component add clippy
     - uses: actions-rs/clippy-check@v1
       with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          args: -p ./src-tauri
 
   
