--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
 todo-txt = {version = "2.0", features = ["serde-support"] }
 directories = "4.0.1"
+todo_lib = {path = "../todo_lib"}
 # reqwest = {version= "0.11.6", features = ["json"] }
 # tempfile = "3.2.0"
 # bytes = "1.1.0"
