--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,17 @@ jobs:
       working-directory: ./src-tauri
       run: cargo test --verbose
       
+  todo_lib:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./todo_lib
+    steps:
+    - uses: actions/checkout@v2
+    - name: Run Tests 
+      working-directory: ./src-tauri
+      run: cargo test --verbose
+      
   clippy_check:
     runs-on: ubuntu-latest
     defaults:
