--- a/todo_lib/Cargo.toml
+++ b/todo_lib/Cargo.toml
@@ -10,3 +10,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = {version = "1.0"}
 chrono = {version = "0.4", features = ["serde"]}
 whoami = {version= "1.2"}
+
+[dev-dependencies]
+pretty_assertions = {version = "1.0"}
