--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
-    "workbench.colorCustomizations": {
-        "activityBar.background": "#2C3012",
-        "titleBar.activeBackground": "#3E431A",
-        "titleBar.activeForeground": "#F9FAF2"
-    }
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#043426",
+    "titleBar.activeBackground": "#054935",
+    "titleBar.activeForeground": "#ECFEF9"
+  }
 }
