--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,9 @@ tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
 directories = "4.0.1"
 todo_lib = {path = "../todo_lib"}
 
+[dev-dependencies]
+pretty_assertions = {version = "1.0"}
+
 [features]
 default = [ "custom-protocol" ]
 custom-protocol = [ "tauri/custom-protocol" ]
