--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
 directories = "4.0.1"
 todo_lib = {path = "../todo_lib"}
+whoami = {version= "1.2"}
 
 [dev-dependencies]
 pretty_assertions = {version = "1.0"}
