--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Run Tests 
       working-directory: ./src-tauri
-    - run: yarn && cargo test
+      run: yarn && cargo test
       
   todo_lib:
     runs-on: ubuntu-latest
